<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="action_settings">Settings</string>
    <string name="show_fields">Show Additional Fields</string>
    <string name="hide_fields">Hide additional Fields</string>
    <string name="name">Name</string>
    <string name="phone_nr">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="job">Job title</string>
    <string name="company">Company</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
